
1.2.2
- Cleanup and code documentation
- Work on custom key support
- Fixed octave numbers in keyboard editor and guitar editor
- More flexible printing dialog; allows changing the printing notation type for each track
- Menu icons on Linux/Windows (thanks to Alexis Archambault for coding this!)
- Keyroll printing

1.2.1
- Fixed printing of accidentals

1.2
- Printing
    - Improved printing dialog
    - Give access to page setup dialog
    - Show progress dialog while calculating print layout
    - Print song tempo
    - Improved layout code, which result in vast improvements when printing tablatures without scores
    - In printing code, removed absolute constants and repalced them to be relative to page size
    - Fixed bugs that caused pages > 1 to have less contents than first page
    - Silences are now also printed in tablature mode; makes them easier to follow
    - Print track name(s)
    - Many other readability improvements to tablature printing
    - Better printing of time signature changes
    - Connect grand staffs toghether (extend measure bars)
    - Collapse long series of empty measures into a gathered rest
    - Allowing configuring whether empty tracks are hidden
    - Prevent invoking print dialog when it's already visible, which caused crashes
    - Don't add a time sig change alone at the end of a line.
    - Misc tweaks and fixes
- Adding and removing tracks no more confuses the undo system
- The "undo" menu is now chattier about what is next to undo
- Fixed bug with key selection (when going back to C)
- Code cleanup and general improvements/fixes
- Improved dialog shown when quitting and there are unsaved changes (now offer to save them)
- Started adding support for custom keys (hidden for now)
- Fixed deleting control events when selection was done from right to left
  (thanks to Alexis Archambault for finding this bug!)
- Applied several patches by Alexis Archambault to improve Windows support